# steltic

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  NOTICE  README.md  pyproject.toml  rag_get_shim.py  run_local.sh
contract/: AGENT_START.md  AISC360_TOC.md  DESIGN_EG_INDEX.md  III1_REFERENCE.md  README_AGENT.md
frontend/: app.js  index.html  styles.css
rag_update/: new_buildings2.jsonl  new_buildings3.jsonl
rag_v2/: README.md  chunk_examples.py  chunk_v2.py  dump_opensees.py  load_opensees.py  reingest_examples.py  reingest_v2.py
sandbox_image/: Dockerfile  build.sh  runner.py
steel_engine/: COMPOSITE_I3.md  aisc_shapes.csv  consistency.py  design_pipeline.py  design_post.py  engine3d.py  example_build.py  frame_diagram.py  pipeline.py  plot_model.py  preflight.py  report.py  sections.py  static_model.py  viewer3d.py  viewer3d_template.html  viz3d.py
steltic/: __init__.py  agent.py  bundle.py  cli.py  config.py  contract.py  job_tools.py  main.py  session.py
test_buildings/: DIFFICULT_FEATURES_KEY.md  Ex10_Dual_SMF_SCBF_16levels_podium.txt  Ex11_BRBF_10levels_Uplan.txt  Ex12_SMF_14levels_chamfer_setback.txt  Ex13_OCBF_4levels_splitlevel.txt  Ex14_EBF_11levels_cruciform_hillside.txt  Ex15_Dual_SMF_BRBF_20levels_weddingcake.txt  Ex16_IMF_3levels_Zplan_school.txt  Ex17_SCBF_9levels_offset_core.txt  Ex18_R3_NotDetailed_8levels_lowseismic.txt  Ex19_SMF_11levels_softstory_podium.txt  Ex1_SCBF_5levels.txt  Ex20_SCBF_12levels_transfer_discontinuous.txt  Ex21_OCBF_1story_bigbox_flexiblediaphragm.txt  Ex22_SMF_6levels_hospital_RiskCatIV.txt  Ex23_Dual_SMF_BRBF_9levels_SDCF_nearfault_EOC.txt  Ex24_Mixed_SMF_NS_SCBF_EW_10levels_bidirectional.txt  Ex25_SMF_12levels_atrium_diaphragmdiscontinuity.txt  Ex26_Dual_SMF_SCBF_18levels_slender_windgoverned.txt  Ex27_CCPSW_CF_20levels_SpeedCore_composite.txt  Ex28_STMF_8levels_longspan_trussmoment.txt  Ex29_Dual_SMF_BRBF_20levels_264ft_NLRHA_PBSD.txt  Ex2_SMF_9levels.txt  Ex7a_redesign.txt  (+14 more)
(+5 files in other folders)
