[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steltic"
version = "0.1.1"
description = "Free, local AISC 360/341 steel-design agent: your LLM + OpenSees + stamped-style reports"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "NOTICE", "DISCLAIMER.md"]
requires-python = ">=3.10"
authors = [{ name = "Steltic" }]
keywords = ["structural-engineering", "AISC", "steel-design", "opensees", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# For EXECUTOR=subprocess (no Docker): the engine runs in this same environment.
engine = ["openseespy", "numpy", "scipy", "matplotlib"]

[project.urls]
Homepage = "https://stelticai.com"

[project.scripts]
steltic = "steltic.cli:main"

# The wheel ships the app package plus its data folders (engine, contract, frontend, example briefs)
# at site-packages top level; steltic/config.py resolves them relative to the package parent, which
# works identically in a checkout and in an installed wheel. Install with uv/pipx (isolated venv).
[tool.hatch.build.targets.wheel]
packages = ["steltic", "steel_engine", "contract", "frontend", "test_buildings"]

[tool.hatch.build.targets.wheel.force-include]
"DISCLAIMER.md" = "steltic/DISCLAIMER.md"

[tool.hatch.build.targets.sdist]
include = ["steltic", "steel_engine", "contract", "frontend", "test_buildings",
           "sandbox_image", "rag_v2", "rag_update", "rag_get_shim.py",
           "README.md", "LICENSE", "NOTICE", "DISCLAIMER.md", ".env.example", "run_local.sh"]
